[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/weapon/weapon001.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/candies/candy002.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Chewy/Chewy-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://components/Weapon/Weapon.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 3 )

[node name="Node2D" type="Control"]
anchor_right = 1.0
margin_right = -360.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 1
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 362.0
margin_bottom = 13.0

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 38.25, 38.75 )
scale = Vector2( 0.635, 0.605 )
texture = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="Panel"]
margin_left = 80.0
margin_top = 3.0
margin_right = 235.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Weapon name"

[node name="PriceSprite" type="Sprite" parent="Panel"]
position = Vector2( 158, 54 )
scale = Vector2( 0.31, 0.27 )
texture = ExtResource( 2 )
offset = Vector2( 32.2581, 7.40739 )

[node name="PriceLabel" type="Label" parent="Panel"]
margin_left = 84.0
margin_top = 41.0
margin_right = 141.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "12"
align = 2

[node name="LevelLabel" type="Label" parent="Panel"]
margin_left = 7.0
margin_top = 41.0
margin_right = 72.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "12"
align = 2

[node name="HpLabel" type="Label" parent="Panel"]
margin_left = 7.0
margin_top = 3.0
margin_right = 72.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
text = "12 hp"

[node name="BuyButton" type="Button" parent="Panel"]
margin_left = 194.0
margin_top = 41.0
margin_right = 289.0
margin_bottom = 73.0
text = "Upgrade"

[connection signal="pressed" from="Panel/BuyButton" to="." method="_on_BuyButton_pressed"]
